@@ -5,7 +5,7 @@
     <artifactId>seleniumJUnitTests</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <build>
-        <sourceDirectory>src/testing/ClassA.java</sourceDirectory>
+        <sourceDirectory>src/</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -16,13 +16,11 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
                 <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
+                    <includes>
+                        <include>src/testing/ClassA.java</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
